<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="pref_sec_summary">При нажатии кнопки "Назад" возвращаются оригинальные значения</string>
    <string name="pref_sec_title">Режим подстраховки</string>
    <string name="pref_dpix_summary">Использовать dp вместо пикселей при изменении разрешения экрана</string>
    <string name="pref_dpix_title">Менять DP</string>
    <string name="font_change_summary">Использовать другой шрифт</string>
    <string name="font_change_title">Другой шрифт</string>
    <string name="pref_color_title">Цветовая тема приложения</string>
    <string name="pref_color_summary">Выберите дизайн приложения который вам будет по душе</string>
    <string name="pref_color_dialogTitle">Выберите цвет:</string>

    <string name="helpTitle">Справка</string>
    <string name="about">О приложении</string>
    <string name="px">РАЗРЕШЕНИЕ</string>
    <string name="density">ПЛОТНОСТЬ</string>
    <string name="overscan">ОТСТУПЫ</string>
	<string name="settings">Настройки</string>
    <string name="ors">Оригинальный размер: </string>
    <string name="nes">Текущий размер: </string>
    <string name="warning">Внимание!</string>
    <string name="wartext">1.Для работы данной программы нужны:\n*root\n*busybox\n2.Неправильное обращение с программой может привести к проблемам</string>
    <string name="height">ВЫСОТА</string>
    <string name="width">ШИРИНА</string>
    <string name="set">Применить</string>
    <string name="reset">По умолчанию</string>
    <string name="app_name">DISIZER</string>
	<string name="pref_dpix">Dp</string>
	<string name="pref_sec">Подстраховка</string>
	<string name="pref_color">Цвет</string>
	<string name="helpTextPx">Я пока без понятия что сюда писать, но скоро всё будет ;)</string>
	<string name="helpSubtextPx">Здесь тоже пусто</string>
	<string name="helpTextDpi">И тут пока что нету ничего интересного...</string>
	<string name="helpSubtextDpi">Думаю скоро всё будет👌</string>
	<string name="helpTextOs">Скоро...</string>
	<string name="helpSubtextOs">...скорО</string>
	<string name="font_change">Шрифт</string>
</resources>
